Credentials issued scrollbar (#1614)
* fix: style fixes

* fix: new screenshots in instuctions page

* fix: browser wallet style fixes

* fix: width of span container

* fix: minor style fixes

* fix: credentials-issued-scrollbar

* fix: credentials-issued-scrollbar

--- a/credentials-verification-web/src/components/bulkImport/Molecules/Steps/_style.scss
+++ b/credentials-verification-web/src/components/bulkImport/Molecules/Steps/_style.scss
@@ -13,11 +13,13 @@
     border-radius: 20px;
     border: none;
     color: $primary-color;
+    
   }
   .ant-select-selection--multiple {
     padding: 7px;
   }
   .anticon {
+    margin-top: 3px;
     color: $primary-color;
   }
   &:focus {
@@ -154,9 +156,11 @@
       color: $primary-color;
       background-color: pink;
       border-radius: 4px;
+      vertical-align: text-top;
     }
     .ant-upload-list-item-done * {
       @include primary-text($body, #4a2dff);
+      vertical-align: text-top;
     }
   }
 }
