--- a/credentials-verification-web/src/components/common/Atoms/CredentialData/_style.scss
+++ b/credentials-verification-web/src/components/common/Atoms/CredentialData/_style.scss
@@ -10,6 +10,7 @@
   .TableText {
     color: $white;
     font-weight: 600;
+    word-spacing: -0.3em;
   }
 
   hr {
