--- a/credentials-verification-web/src/components/common/Atoms/CustomInputGroup/_style.scss
+++ b/credentials-verification-web/src/components/common/Atoms/CustomInputGroup/_style.scss
@@ -3,7 +3,7 @@
 $border: 1px solid rgb(217, 217, 217);
 
 .InputContainer {
-  border: $border;
+  border: 1px solid #3e3e3e;
   border-radius: 4px;
   display: flex;
   align-items: center;
@@ -13,8 +13,8 @@ $border: 1px solid rgb(217, 217, 217);
     padding: 0 8px;
   }
   &:focus-within {
-    border-color: #40a9ff;
-    box-shadow: 0 0 0 2px rgba(24, 144, 255, 0.2);
+    border-color: $primary-color;
+    box-shadow: 0 0 0 2px rgba(255, 24, 24, 0.2)
   }
   .ChildrenContainer {
     border: none;
