--- a/credentials-verification-web/src/components/connections/Atoms/StatusBadge/_style.scss
+++ b/credentials-verification-web/src/components/connections/Atoms/StatusBadge/_style.scss
@@ -10,6 +10,7 @@
   text-align: center;
   padding: 3px 6px;
   width: max-content;
+  word-spacing: -0.3em;
 
   p {
     @include secondary-text($label, $white);
