--- a/credentials-verification-web/src/components/credentials/Organisms/Tables/CredentialsTable/_style.scss
+++ b/credentials-verification-web/src/components/credentials/Organisms/Tables/CredentialsTable/_style.scss
@@ -1,7 +1,13 @@
 @import "../../../../../css/general_styling";
 
-.CredentialsTable {
+.credentialsIssued {
   height: calc(100% - 10em);
+}
+.credentialsReceived {
+  height: calc(100% - 5em);
+}
+
+.CredentialsTable {
   margin-top: 10px;
   table {
     @include primary-text($body, $black);
